kubernetes-monitoring/metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-metrics-service
  namespace: homework
  labels:
    app: nginx-metrics # Этот label важен для ServiceMonitor
spec:
  selector:
    app: nginx-metrics # Должен совпадать с labels из вашего deployment
  ports:
  - name: metrics
    port: 9113
    targetPort: 9113
  - name: http
    port: 80
    targetPort: 80
