kubernetes-monitoring/ingress-monitor.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
    - host: grafana.otus
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: prometheus-stack-grafana
              port:
                number: 80
    - host: prometheus.otus
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: prometheus-stack-kube-prom-prometheus
              port:
                number: 9090
